--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "github-graphql-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Apollo GraphQL Server for the wikiWhat? game",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/babel-node --presets es2015 ./server.js"
   },
-  "author": "",
+  "author": "Anna Wen, Julianna Gabler",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
@@ -17,6 +17,9 @@
     "babel-preset-es2015": "^6.24.1",
     "express": "^4.15.4",
     "express-graphql": "^0.6.7",
-    "graphql": "^0.11.1"
+    "graphql": "^0.11.1",
+    "react": "^15.6.1",
+    "react-apollo": "^1.4.15",
+    "webpack": "^2.7.0"
   }
 }
