--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "express": "^4.15.4",
     "express-graphql": "^0.6.7",
     "graphql": "^0.11.1",
+    "lodash": "^4.17.4",
+    "mysql2": "^1.4.2",
     "react": "^15.6.1",
     "react-apollo": "^1.4.15",
+    "sequelize": "^4.7.5",
+    "sqlite": "^2.8.0",
     "webpack": "^2.7.0"
   }
 }
