--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
     "express-graphql": "^0.6.7",
     "graphql": "^0.11.1",
