--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.15.4",
     "express-graphql": "^0.6.7",
     "graphql": "^0.11.1",
+    "graphql-iso-date": "^3.2.0",
     "mysql2": "^1.4.2",
     "react": "^15.6.1",
     "react-apollo": "^1.4.15",
